<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <!-- Back Arrow and Title -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/address_top_bg"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:gravity="center_vertical">

        <!-- Back Arrow -->
        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/round_arrow_back_24"
            android:contentDescription="Back"
            android:padding="8dp" />

        <!-- Title -->
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/give_your_address"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <!-- Form Fields -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_margin="16dp"
        android:orientation="vertical">

        <!-- Contact Name Field -->
        <EditText
            android:id="@+id/et_contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_name_required"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/edit_text_background"
            android:textColorHint="@color/grey" />

        <!-- Contact Phone Number Field -->
        <EditText
            android:id="@+id/et_contact_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/contact_phone_number_required"
            android:inputType="phone"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/edit_text_background"
            android:textColor="@color/black"
            android:textColorHint="@color/grey" />

        <!-- Street Field -->
        <EditText
            android:id="@+id/et_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/street_required"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/edit_text_background"
            android:textColor="@color/black"
            android:textColorHint="@color/grey" />


        <!-- Pincode/Zip Field -->
        <EditText
            android:id="@+id/et_pincode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/pincode_zip_required"
            android:inputType="number"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/edit_text_background"
            android:textColor="@color/black"
            android:textColorHint="@color/grey" />

        <!-- State Field -->
        <!-- State Spinner -->
        <Spinner
            android:id="@+id/spinner_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_background"
            android:paddingLeft="2dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:spinnerMode="dropdown"
 />

        <!-- City Spinner -->
        <Spinner
            android:id="@+id/spinner_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_background"
            android:paddingLeft="2dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:spinnerMode="dropdown"
            />


        <!-- Country Dropdown -->
        <Spinner
            android:id="@+id/spinner_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingLeft="2dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/edit_text_background"
            android:drawableEnd="@drawable/dropdown_arrow"
        android:spinnerMode="dropdown"
        android:prompt="@string/country_prompt" />


    </LinearLayout>

    <!-- Save Address Button -->
    <Button
        android:id="@+id/btn_save_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_address"
        android:backgroundTint="@color/dblue"
        android:textColor="@android:color/white"
        android:padding="12dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp" />
</LinearLayout>
